# HW_14_WEB

./: .coverage  aidocs.py  db.py  docker-compose.yml  docs.json  example.json  main.py  pyproject.toml  run_server.py  test.sqlite
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: dcd743f50d75_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
